--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,8 +3,7 @@
 <head>
   <title>SHEBA mss</title>
   <link rel="icon" type="image/png" href="%PUBLIC_URL%/icon.png" />
-  <link rel="stylesheet" href="../src/Dashboard/dashboard.css">
-  <link rel="stylesheet" href="../src/Login/Login.css">
+  <link rel="stylesheet" href="../src/Login/login.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
